plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_19
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
    it.options.compilerArgs.add('--add-modules=jdk.incubator.vecto')
}

test {
    useJUnitPlatform()
}